tests/algorithms/x/C/sorts/unknown_sort.c
// Generated by Mochi 0.10.32 on 2025-08-11 17:23 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t remove_once_len;
size_t reverse_list_len;
size_t merge_sort_len;

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%d", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static size_t concat_len;
static long long* concat_long_long(long long *a, size_t a_len, const long long *b, size_t b_len) {
    long long *res = realloc(a, (a_len + b_len) * sizeof(long long));
    if (b_len > 0) memcpy(res + a_len, b, b_len * sizeof(long long));
    concat_len = a_len + b_len;
    return res;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long list_min(long long * xs, size_t xs_len);
long long list_max(long long * xs, size_t xs_len);
long long * remove_once(long long * xs, size_t xs_len, long long value);
long long * reverse_list(long long * xs, size_t xs_len);
long long * merge_sort(long long * collection, size_t collection_len);
void test_merge_sort();
void user_main();
int main(void);

long long list_min(long long * xs, size_t xs_len) {
    long long i = 1LL;
    long long m = xs[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})];
    while (i < xs_len) {
        if (xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})] < m) {
            m = xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})];
        }
        i = i + 1LL;
    }
    return m;
}

long long list_max(long long * xs, size_t xs_len) {
    long long i = 1LL;
    long long m = xs[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})];
    while (i < xs_len) {
        if (xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})] > m) {
            m = xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})];
        }
        i = i + 1LL;
    }
    return m;
}

long long * remove_once(long long * xs, size_t xs_len, long long value) {
    long long *res = NULL;
    size_t res_len = 0;
    long long removed = 0LL;
    long long i = 0LL;
    while (i < xs_len) {
        if (!(removed) && (xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})] == value)) {
            removed = 1LL;
        } else {
            res = list_append_long_long(res, &res_len, xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
        }
        i = i + 1LL;
    }
    return remove_once_len = res_len, res;
}

long long * reverse_list(long long * xs, size_t xs_len) {
    long long *res = NULL;
    size_t res_len = 0;
    long long i = xs_len - 1LL;
    while (i >= 0LL) {
        res = list_append_long_long(res, &res_len, xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
        i = i - 1LL;
    }
    return reverse_list_len = res_len, res;
}

long long * merge_sort(long long * collection, size_t collection_len) {
    long long *start = NULL;
    size_t start_len = 0;
    long long *end = NULL;
    size_t end_len = 0;
    long long *coll = collection;
    size_t coll_len = collection_len;
    while (coll_len > 1LL) {
        long long mn = list_min(coll, coll_len);
        long long mx = list_max(coll, coll_len);
        start = list_append_long_long(start, &start_len, mn);
        end = list_append_long_long(end, &end_len, mx);
        coll = remove_once(coll, coll_len, mn);
        coll_len = remove_once_len;
        coll = remove_once(coll, coll_len, mx);
        coll_len = remove_once_len;
    }
    end = reverse_list(end, end_len);
    end_len = reverse_list_len;
    {
        long long* __ret1 = concat(concat_long_long(start, start_len, coll, coll_len), end);
        merge_sort_len = concat_len;
        return __ret1;
    }
}

void test_merge_sort() {
    if (merge_sort(({long long *tmp = malloc(5 * sizeof(long long)); tmp[0] = 0LL; tmp[1] = 5LL; tmp[2] = 3LL; tmp[3] = 2LL; tmp[4] = 2LL; tmp;}), 5) != ({long long *tmp = malloc(5 * sizeof(long long)); tmp[0] = 0LL; tmp[1] = 2LL; tmp[2] = 2LL; tmp[3] = 3LL; tmp[4] = 5LL; tmp;})) {
        panic("case1 failed");
    }
    if (merge_sort(NULL, 0) != NULL) {
        panic("case2 failed");
    }
    if (merge_sort(({long long *tmp = malloc(3 * sizeof(long long)); tmp[0] = -2LL; tmp[1] = -5LL; tmp[2] = -45LL; tmp;}), 3) != ({long long *tmp = malloc(3 * sizeof(long long)); tmp[0] = -45LL; tmp[1] = -5LL; tmp[2] = -2LL; tmp;})) {
        panic("case3 failed");
    }
}

void user_main() {
    test_merge_sort();
    puts(({long long *__tmp2 = merge_sort(({long long *tmp = malloc(5 * sizeof(long long)); tmp[0] = 0LL; tmp[1] = 5LL; tmp[2] = 3LL; tmp[3] = 2LL; tmp[4] = 2LL; tmp;}), 5); char *__res = str_list_int(__tmp2, merge_sort_len); __res;}));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
